Implementering af logo

--- a/Norriq-Solutions/Pages/NORRIQFrontPage.html
+++ b/Norriq-Solutions/Pages/NORRIQFrontPage.html
@@ -4,7 +4,20 @@
     <meta charset="utf-8" />
     <title></title>
 </head>
+
+<style>
+    .header-logo{
+        width:auto;
+        height:auto;
+    }
+</style>
 <body>
-    <h1> NORRIQ </h1>
+    <header class="header">
+        <div class="header-main">
+            <div class="header-logo">
+                <a href="NORRIQFrontPage.html"><img src="NORRIQ-logo.png"></a>
+            </div>
+        </div>
+    </header>
 </body>
 </html>
