--- a/Norriq-Solutions/Pages/NORRIQFrontPage.html
+++ b/Norriq-Solutions/Pages/NORRIQFrontPage.html
@@ -6,16 +6,18 @@
 </head>
 
 <style>
+    
     .header-logo{
-        width:auto;
-        height:auto;
+        width: 100px;
+        height:50px;
+        padding-top: 5%;
     }
 </style>
 <body>
     <header class="header">
-        <div class="header-main">
+        <div class="header-main" style="background-color:black">
             <div class="header-logo">
-                <a href="NORRIQFrontPage.html"><img src="NORRIQ-logo.png"></a>
+                <a href="NORRIQFrontPage.html"><img src="../image/NORRIQ-Logo-WhiteBlue.svg"></a>
             </div>
         </div>
     </header>
