--- a/Norriq-Solutions/Pages/NORRIQFrontPage.html
+++ b/Norriq-Solutions/Pages/NORRIQFrontPage.html
@@ -2,17 +2,20 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title>NORRIQ</title>
+
+    <style>
+
+        .header-logo {
+            width: 100px;
+            height: 50px;
+            padding-top: 5%;
+        }
+    </style>
+
 </head>
 
-<style>
-    
-    .header-logo{
-        width: 100px;
-        height:50px;
-        padding-top: 5%;
-    }
-</style>
+
 <body>
     <header class="header">
         <div class="header-main" style="background-color:black">
