--- a/Norriq-Solutions/Pages/NORRIQFrontPage.html
+++ b/Norriq-Solutions/Pages/NORRIQFrontPage.html
@@ -39,7 +39,7 @@
             max-width: 80%;
         }
 
-        .header-right {
+        /*.header-right {
             order: 2;
             justify-content: flex-end;
             display: flex;
@@ -71,7 +71,7 @@
 
         .li {
             float: left;
-        }
+        }*/
     </style>
 
 </head>
@@ -82,29 +82,6 @@
         <div class="header-main" style="background-color: black">
             <div class="header-logo">
                 <a href="NORRIQFrontPage.html"><img src="../image/NORRIQ-Logo-WhiteBlue.svg"></a>
-            </div>
-            <div class="header-center">
-                <nav class="header-nav" id="headerNavigation">
-                    <div class="nav-overflow">
-                        <ul class="nav">
-                            <li class="nav-item">
-                                <a class="nav-link">Cases</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link">Cases</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link">Cases</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link">Cases</a>
-                            </li>
-                        </ul>
-                    </div>
-                </nav>
-            </div>
-            <div class="header-right">
-
             </div>
         </div>
     </header>
