--- a/Norriq-Solutions/Pages/NORRIQFrontPage.html
+++ b/Norriq-Solutions/Pages/NORRIQFrontPage.html
@@ -39,7 +39,7 @@
             max-width: 80%;
         }
 
-        /*.header-right {
+        .header-right {
             order: 2;
             justify-content: flex-end;
             display: flex;
@@ -52,7 +52,7 @@
             max-width: 30%;
         }
 
-        .nav-overflow {
+        /*.nav-overflow {
             display: inline;
         }
 
@@ -63,7 +63,7 @@
         .nav-link {
             color: white;
             min-height: 100px;
-            /*display: block;*/
+            display: block;
             align-items: center;
             text-align: center;
             font-size: 14px;
@@ -82,6 +82,12 @@
         <div class="header-main" style="background-color: black">
             <div class="header-logo">
                 <a href="NORRIQFrontPage.html"><img src="../image/NORRIQ-Logo-WhiteBlue.svg"></a>
+            </div>
+            <div class="header-center">
+
+            </div>
+            <div class="header-right">
+
             </div>
         </div>
     </header>
