--- a/Norriq-Solutions/Pages/NORRIQSolutionsPage.html
+++ b/Norriq-Solutions/Pages/NORRIQSolutionsPage.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="utf-8" />
     <title>NORRIQ Solutions</title>
+    
     <link rel="stylesheet" href="../CSS/NORRIQSolutionsFrontPage.css"/>
 </head>
 <body>
-    <div class="header-main" style="background-color: blue">
-        <div class="header-logo">
-            <a class="header-logo" href="NORRIQFrontPage.html"><img src="../image/NORRIQSolutionsLogo.png"></a>
-        </div>
+<div class="header-main" style="background-color: black">
+    <div class="header-logo-solutions">
+        <a class="header-logo-solutions" href="NORRIQFrontPage.html"><img src="../image/NORRIQSolutionsLogo.jpg" style="height: 55px"></a>
     </div>
+</div>
 </body>
 </html>
