--- a/Norriq-Solutions/Pages/NORRIQSolutionsPage.html
+++ b/Norriq-Solutions/Pages/NORRIQSolutionsPage.html
@@ -6,11 +6,14 @@
     
     <link rel="stylesheet" href="../CSS/NORRIQSolutionsFrontPage.css"/>
 </head>
-<body>
-<div class="header-main" style="background-color: black">
+<body style="background-color:#002e36">
+<div class="header-main" style="background-color:#002e36">
     <div class="header-logo-solutions">
-        <a class="header-logo-solutions" href="NORRIQFrontPage.html"><img src="../image/NORRIQSolutionsLogo.jpg" style="height: 55px"></a>
+        <a class="header-logo-solutions" href="NORRIQFrontPage.html"><img src="../image/NORRIQ-Logo-WhiteBlue.svg" style="height: 55px"></a>
     </div>
+</div>
+<div class="main-body">
+    <p>Hvad har du brug for hjælp til?</p>
 </div>
 </body>
 </html>
