--- a/Norriq-Solutions/Pages/NORRIQSolutionsWebsite.html
+++ b/Norriq-Solutions/Pages/NORRIQSolutionsWebsite.html
@@ -3,8 +3,13 @@
 <head>
     <meta charset="utf-8" />
     <title>Website</title>
+    <link rel="stylesheet" href="../CSS/NORRIQSolutionsFrontPage.css"/>
 </head>
-<body>
-
+<body style="background-color:#002e36">
+<div class="header-main" style="background-color:#002e36">
+    <div class="header-logo-solutions">
+        <a class="header-logo-solutions" href="NORRIQFrontPage.html"><img src="../image/NORRIQ-Logo-WhiteBlue.svg"></a>
+    </div>
+</div>
 </body>
 </html>
