--- a/Norriq-Solutions/Pages/NORRIQSolutionsPage.html
+++ b/Norriq-Solutions/Pages/NORRIQSolutionsPage.html
@@ -9,7 +9,7 @@
 <body style="background-color:#002e36">
 <div class="header-main" style="background-color:#002e36">
     <div class="header-logo-solutions">
-        <a class="header-logo-solutions" href="NORRIQFrontPage.html"><img src="../image/NORRIQ-Logo-WhiteBlue.svg" style="height: 55px"></a>
+        <a class="header-logo-solutions" href="NORRIQFrontPage.html"><img src="../image/NORRIQ-Logo-WhiteBlue.svg"></a>
     </div>
 </div>
 <div class="main-body">
