--- a/Norriq-Solutions/Pages/NORRIQFrontPage.html
+++ b/Norriq-Solutions/Pages/NORRIQFrontPage.html
@@ -63,12 +63,12 @@
         </div>
     </div>
 </header>
-<!--<div class="banner-full" style="background-image: url(/image/FrontPageBackground.png)">
-</div>-->
 <div class="banner-video">
     <video muted autoplay loop id="video" style="height: 100%">
-        <source src="https://vod-progressive.akamaized.net/exp=1606143580~acl=%2Fvimeo-prod-skyfire-std-us%2F01%2F433%2F19%2F477168525%2F2130853601.mp4~hmac=691d2af22df47f849619ecc9e12cf0d32af67a72b4d29db715b7a806d8e2c91d/vimeo-prod-skyfire-std-us/01/433/19/477168525/2130853601.mp4?filename=clouds.mp4&amp;fbclid=IwAR1LS2F182NwgrBStHDJEg9gTdMUGog5vtbIUWYS9hU47xACIWMPhGC1dTc" type="video/mp4"/>
+        <source src="https://player.vimeo.com/external/477168525.hd.mp4?s=65f79dad52f14d33dd8a13823ff7f00147c5c900&profile_id=174" type="video/mp4"/>
     </video>
+</div>
+<div class="banner-full" style="background-image: url(/image/FrontPageBackground.png)">
 </div>
 </body>
 </html>
