--- a/Norriq-Solutions/Pages/NORRIQSolutionsApplication.html
+++ b/Norriq-Solutions/Pages/NORRIQSolutionsApplication.html
@@ -6,11 +6,31 @@
     <link rel="stylesheet" href="../CSS/NORRIQSolutionsFrontPage.css" />
 </head>
 <body style="background-color:#002e36">
-<div class="header-main" style="background-color:#002e36">
-    <div class="header-logo-solutions">
-        <a class="header-logo-solutions" href="NORRIQFrontPage.html"><img src="../image/NORRIQ-Logo-WhiteBlue.svg"></a>
+    <div class="header-main" style="background-color:#002e36">
+        <div class="header-logo-solutions">
+            <a class="header-logo-solutions" href="NORRIQFrontPage.html"><img src="../image/NORRIQ-Logo-WhiteBlue.svg"></a>
+        </div>
     </div>
-</div>
+    <div class="main-body">
+        <p class="questions">Fortæl os mere om din applikation</p>
+        <form action="../Pages/NORRIQSolutionsPage.html">
+            <input type="checkbox" id="ApplicationSolution1" name="ApplicationSolution1" value="Website" onclick="selectOnlyThisApplication(this.id)">
+            <label for="ApplicationSolution1"> Jeg ønsker en simpel applikaton.</label><br>
+            <p class="description">Her skal der være en beskrivelse</p>
+
+            <input type="checkbox" id="ApplicationSolution2" name="ApplicationSolution2" value="Webshop" onclick="selectOnlyThisApplication(this.id)">
+            <label for="ApplicationSolution2"> Jeg ønsker en kompleks applikation.</label><br>
+            <p class="description">Her skal der være en beskrivelse</p>
+
+            <input type="checkbox" id="ApplicationSolution3" name="ApplicationSolution3" value="Application" onclick="selectOnlyThisApplication(this.id)">
+            <label for="ApplicationSolution3"> Jeg ønsker at flytte min applikation.</label><br><br>
+            <p class="description">Her skal der være en beskrivelse</p>
+
+            <input type="submit" value="Næste" onclick="return WhichSolutionIsCheckedApplication();">
+        </form>
+
+    </div>
+    <script src="../Scripts/NORRIQSolutions.js"></script>
 
 </body>
 </html>
