--- a/Norriq-Solutions/Pages/NORRIQSolutionsWebsite.html
+++ b/Norriq-Solutions/Pages/NORRIQSolutionsWebsite.html
@@ -6,10 +6,38 @@
     <link rel="stylesheet" href="../CSS/NORRIQSolutionsFrontPage.css"/>
 </head>
 <body style="background-color:#002e36">
-<div class="header-main" style="background-color:#002e36">
-    <div class="header-logo-solutions">
-        <a class="header-logo-solutions" href="NORRIQFrontPage.html"><img src="../image/NORRIQ-Logo-WhiteBlue.svg"></a>
-    </div>
+    <div class="header-main" style="background-color:#002e36">
+        <div class="header-logo-solutions">
+            <a class="header-logo-solutions" href="NORRIQFrontPage.html"><img src="../image/NORRIQ-Logo-WhiteBlue.svg"></a>
+        </div>
 </div>
+<div class="main-body">
+    <p class="questions">Fortæl os mere om din hjemmeside</p>
+    <form action="../Pages/NORRIQSolutionsPage.html">
+        <input type="checkbox" id="WebsiteSolution1" name="WebsiteSolution1" value="Website" onclick="selectOnlyThisWebsite(this.id)">
+        <label for="Solution1"> Jeg ønsker en grundlæggende hjemmeside.</label><br>
+        <p class="description">Her skal der være en beskrivelse</p>
+
+        <input type="checkbox" id="WebsiteSolution2" name="WebsiteSolution2" value="Webshop" onclick="selectOnlyThisWebsite(this.id)">
+        <label for="Solution2"> Jeg ønsker en kompleks hjemmeside.</label><br>
+        <p class="description">Her skal der være en beskrivelse</p>
+
+        <input type="checkbox" id="WebsiteSolution3" name="WebsiteSolution3" value="Application" onclick="selectOnlyThisWebsite(this.id)">
+        <label for="Solution3"> Jeg ønsker ændringer på eksisterende hjemmeside.</label><br><br>
+        <p class="description">Her skal der være en beskrivelse</p>
+
+        <input type="checkbox" id="WebsiteSolution4" name="WebsiteSolution4" value="Application" onclick="selectOnlyThisWebsite(this.id)">
+        <label for="Solution3"> Jeg ønsker at flytte min hjemmeside(hosting).</label><br><br>
+        <p class="description">Her skal der være en beskrivelse</p>
+
+        <input type="checkbox" id="WebsiteSolution5" name="WebsiteSolution5" value="Application" onclick="selectOnlyThisWebsite(this.id)">
+        <label for="Solution3"> Jeg ønsker en mobil hjemmeside.</label><br><br>
+        <p class="description">Her skal der være en beskrivelse</p>
+
+        <input type="submit" value="Næste" onclick="return WhichSolutionIsCheckedWebsite();">
+    </form>
+
+</div>
+<script src="../Scripts/NORRIQSolutions.js"></script>
 </body>
 </html>
