--- a/Norriq-Solutions/Pages/NORRIQSolutionsPage.html
+++ b/Norriq-Solutions/Pages/NORRIQSolutionsPage.html
@@ -24,7 +24,7 @@
         <p class="description">Her skal der være en beskrivelse</p>
 
         <input type="checkbox" id="Solution3" name="Solution3" value="Application" onclick="selectOnlyThis(this.id)">
-        <label for="Solution3"> Jeg ønsker en applikation.</label><br><br>
+        <label for="Solution3"> Jeg ønsker en applikation.</label><br>
         <p class="description">Her skal der være en beskrivelse</p>
 
         <input type="submit" value="Næste" onclick="return WhichSolutionIsChecked();">
