--- a/Norriq-Solutions/Pages/NORRIQSolutionsWebsite.html
+++ b/Norriq-Solutions/Pages/NORRIQSolutionsWebsite.html
@@ -23,15 +23,15 @@
         <p class="description">Her skal der være en beskrivelse</p>
 
         <input type="checkbox" id="WebsiteSolution3" name="WebsiteSolution3" value="Application" onclick="selectOnlyThisWebsite(this.id)">
-        <label for="Solution3"> Jeg ønsker ændringer på eksisterende hjemmeside.</label><br><br>
+        <label for="Solution3"> Jeg ønsker ændringer på eksisterende hjemmeside.</label><br>
         <p class="description">Her skal der være en beskrivelse</p>
 
         <input type="checkbox" id="WebsiteSolution4" name="WebsiteSolution4" value="Application" onclick="selectOnlyThisWebsite(this.id)">
-        <label for="Solution3"> Jeg ønsker at flytte min hjemmeside(hosting).</label><br><br>
+        <label for="Solution3"> Jeg ønsker at flytte min hjemmeside(hosting).</label><br>
         <p class="description">Her skal der være en beskrivelse</p>
 
         <input type="checkbox" id="WebsiteSolution5" name="WebsiteSolution5" value="Application" onclick="selectOnlyThisWebsite(this.id)">
-        <label for="Solution3"> Jeg ønsker en mobil hjemmeside.</label><br><br>
+        <label for="Solution3"> Jeg ønsker en mobil hjemmeside.</label><br>
         <p class="description">Her skal der være en beskrivelse</p>
 
         <input type="submit" value="Næste" onclick="return WhichSolutionIsCheckedWebsite();">
