--- a/Norriq-Solutions/Pages/NORRIQSolutionsApplication.html
+++ b/Norriq-Solutions/Pages/NORRIQSolutionsApplication.html
@@ -23,7 +23,7 @@
             <p class="description">Her skal der være en beskrivelse</p>
 
             <input type="checkbox" id="ApplicationSolution3" name="ApplicationSolution3" value="Application" onclick="selectOnlyThisApplication(this.id)">
-            <label for="ApplicationSolution3"> Jeg ønsker at flytte min applikation.</label><br><br>
+            <label for="ApplicationSolution3"> Jeg ønsker at flytte min applikation.</label><br>
             <p class="description">Her skal der være en beskrivelse</p>
 
             <input type="submit" value="Næste" onclick="return WhichSolutionIsCheckedApplication();">
