--- a/Norriq-Solutions/Pages/NORRIQSolutionsWebshop.html
+++ b/Norriq-Solutions/Pages/NORRIQSolutionsWebshop.html
@@ -24,7 +24,7 @@
         <p class="description">Her skal der være en beskrivelse</p>
 
         <input type="checkbox" id="WebshopSolution3" name="WebshopSolution3" value="Application" onclick="selectOnlyThisWebshop(this.id)">
-        <label for="WebshopSolution3"> Jeg ønsker at flytte min webshop.</label><br><br>
+        <label for="WebshopSolution3"> Jeg ønsker at flytte min webshop.</label><br>
         <p class="description">Her skal der være en beskrivelse</p>
 
         <input type="submit" value="Næste" onclick="return WhichSolutionIsCheckedWebshop();">
