--- a/Norriq-Solutions/Pages/NORRIQSolutionsPage.html
+++ b/Norriq-Solutions/Pages/NORRIQSolutionsPage.html
@@ -17,15 +17,15 @@
     <form action="../Pages/NORRIQSolutionsPage.html">
         <input type="checkbox" id="Solution1" name="Solution1" value="Website" onclick="selectOnlyThis(this.id)">
         <label for="Solution1"> Jeg ønsker at få en hjemmeside.</label><br>
-        <p class="description">Her skal der være en beskrivelse</p>
+        <p class="description">Opret en ny hjemmeside fra bunden, redesign, migrer en eksisterende hjemmeside eller opbyg en mobil hjemmeside.</p>
 
         <input type="checkbox" id="Solution2" name="Solution2" value="Webshop" onclick="selectOnlyThis(this.id)">
         <label for="Solution2"> Jeg ønsker at få en webshop.</label><br>
-        <p class="description">Her skal der være en beskrivelse</p>
+        <p class="description">Få en eCommerce-hjemmeside med avancerede webshopkapaciteter, optimeringsværktøjer til webshoppen og nye webshopindstillnger.</p>
 
         <input type="checkbox" id="Solution3" name="Solution3" value="Application" onclick="selectOnlyThis(this.id)">
         <label for="Solution3"> Jeg ønsker en applikation.</label><br>
-        <p class="description">Her skal der være en beskrivelse</p>
+        <p class="description">Få en simpel applikation, en kompleks applikation eller muligheden for at flytte en eksisterende applikation.</p>
 
         <input type="submit" value="Næste" onclick="return WhichSolutionIsChecked();">
     </form>
