--- a/Norriq-Solutions/Pages/NORRIQSolutionsWebsite.html
+++ b/Norriq-Solutions/Pages/NORRIQSolutionsWebsite.html
@@ -16,24 +16,25 @@
     <form action="../Pages/NORRIQSolutionsPage.html">
         <input type="checkbox" id="WebsiteSolution1" name="WebsiteSolution1" value="Website" onclick="selectOnlyThisWebsite(this.id)">
         <label for="Solution1"> Jeg ønsker en grundlæggende hjemmeside.</label><br>
-        <p class="description">Her skal der være en beskrivelse</p>
+        <p class="description">Få en simpel forside med biografi og kontaktformular.</p>
 
         <input type="checkbox" id="WebsiteSolution2" name="WebsiteSolution2" value="Webshop" onclick="selectOnlyThisWebsite(this.id)">
         <label for="Solution2"> Jeg ønsker en kompleks hjemmeside.</label><br>
-        <p class="description">Her skal der være en beskrivelse</p>
+        <p class="description">Få en fantastisk hjemmeside med tilpassede visuelle elementer, klientadministration mm.</p>
 
         <input type="checkbox" id="WebsiteSolution3" name="WebsiteSolution3" value="Application" onclick="selectOnlyThisWebsite(this.id)">
         <label for="Solution3"> Jeg ønsker ændringer på eksisterende hjemmeside.</label><br>
-        <p class="description">Her skal der være en beskrivelse</p>
+        <p class="description">Få et nyt tema og et opdateret design til din eksisterende hjemmeside.</p>
 
         <input type="checkbox" id="WebsiteSolution4" name="WebsiteSolution4" value="Application" onclick="selectOnlyThisWebsite(this.id)">
         <label for="Solution3"> Jeg ønsker at flytte min hjemmeside(hosting).</label><br>
-        <p class="description">Her skal der være en beskrivelse</p>
+        <p class="description">Flyt en eksisterende hjemmeside til NORRIQ hosting.</p>
 
         <input type="checkbox" id="WebsiteSolution5" name="WebsiteSolution5" value="Application" onclick="selectOnlyThisWebsite(this.id)">
         <label for="Solution3"> Jeg ønsker en mobil hjemmeside.</label><br>
-        <p class="description">Her skal der være en beskrivelse</p>
+        <p class="description">Få en hjemmeside der også kan bruges på farten.</p>
 
+        <button onclick="goBack()">Tilbage</button>
         <input type="submit" value="Næste" onclick="return WhichSolutionIsCheckedWebsite();">
     </form>
 
