--- a/Norriq-Solutions/Pages/NORRIQFrontPage.html
+++ b/Norriq-Solutions/Pages/NORRIQFrontPage.html
@@ -20,19 +20,20 @@
                             <a class="nav-link">Cases</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="NORRIQSolutionsPage.html">Find din løsning</a>
+                            <!--<a class="nav-link" href="NORRIQSolutionsPage.html">Find din løsning</a>-->
+                            <a class="nav-link">Find din løsning</a>
                             <!--<div class="nav-mega-menu" id="1">
-                                <div class="nav-overflow">
-                                    <ul class="nav-submenu">
-                                        <li>
-                                            <button class="nav-close" data-toggle="slideoutSub" data-target="#1"></button>
-                                        </li>
-                                        <li class="sub-menu-item">
-                                            <a class="sub-menu-link" href="NORRIQSolutionsPage.html"></a>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>-->
+        <div class="nav-overflow">
+            <ul class="nav-submenu">
+                <li>
+                    <button class="nav-close" data-toggle="slideoutSub" data-target="#1"></button>
+                </li>
+                <li class="sub-menu-item">
+                    <a class="sub-menu-link" href="NORRIQSolutionsPage.html"></a>
+                </li>
+            </ul>
+        </div>
+    </div>-->
                         </li>
                         <li class="nav-item">
                             <a class="nav-link">Kom i gang</a>
